<resources>
    <string name="app_name">NeighborJob</string>
    <string name="neighborjob">NeighborJob</string>
    <string name="Welcome">Welcome! :)</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="active_jobs">Active Jobs</string>
    <string name="avalaible_jobs">Avalaible Jobs</string>
    <string name="job_history">Job History</string>
    <string name="create_job">Create Job</string>
</resources>